[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Habeen-Jun"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.96.0"
black = "^23.3.0"
openai = "^0.27.7"
uvicorn = "^0.22.0"
pydantic = "^1.10.8"
tortoise-orm = "^0.19.3"
jwt = "^1.3.1"
pyjwt = "^2.7.0"
passlib = "^1.7.4"
python-multipart = "^0.0.6"
bcrypt = "^4.0.1"
tortoise = "^0.1.1"
sympy = "^1.12"
pinecone-client = "^2.2.2"
pypdf2 = "^3.0.1"
tiktoken = "^0.4.0"
faiss-cpu = "^1.7.4"

[tool.poetry.group.dev.dependencies]
langchain = "^0.0.191"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
